plugins {
	id 'groovy'
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id "io.freefair.lombok" version "6.4.1"
	id "com.google.cloud.tools.jib" version "3.2.0"
	id 'net.researchgate.release' version "3.0.2"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation platform('org.springframework.boot:spring-boot-dependencies:3.0.5')
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework:spring-webflux"
	implementation 'org.projectlombok:lombok:1.18.26'

	implementation platform('org.spockframework:spock-bom:2.3-groovy-4.0')

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.spockframework:spock-core'
	testImplementation 'org.spockframework:spock-spring'
}

def ENABLE_PREVIEW = "--enable-preview"

tasks.named("bootJar") {
	manifest {
		attributes 'Project-Version': project.version
	}
}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs += ENABLE_PREVIEW
}

tasks.withType(JavaExec) {
	jvmArgs += ENABLE_PREVIEW
}


tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add(ENABLE_PREVIEW)
}

springBoot {
	buildInfo {
	}
}

jar {
	enabled = false
}
bootJar {
	enabled = true
}

tasks.named("bootJar") {
	manifest {
		attributes 'Project-Version': project.version
	}
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}
